Support for JDK 11